modify junit files